src/test/ui/consts/const_arg_local.stderr
error: argument 1 is required to be a constant
  --> $DIR/const_arg_local.rs:8:5
   |
LL |     foo(imm8)
   |     ^^^^^^^^^

error: aborting due to previous error

